<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- String for opening settings drawer, used for accessibility -->
    <string name="drawer_open">open drawer</string>

    <!-- String for closing settings drawer, used for accessibility -->
    <string name="drawer_close">close drawer</string>

    <!-- Explanation shown when user presses on an error message in the glucose list -->
    <string name="err_explanation">ERR means the watch has failed to fetch glucose data.\n\nMake sure the watch is right above the sensor with the watch screen facing the sensor.\n\nMake sure also that the watch has NFC turned on. Check this by opening the app \"NFC configuration\" on the watch. Should it be impossible to turn on NFC, restart the watch and try again.</string>

    <!-- Disclaimer message shown when user first starts app -->
    <string name="disclaimer_message">Please read through these points, it\'s important!\n\n1, This is an unofficial app and has not been approved in any way by Abbott.\n\n2, The glucose values produced by this app are not accurate. The only purpose with this app is to alarm the user when his or her glucose level is too high or too low. All values should be confirmed using official Abbott tools.\n\n3, Do not rely on the app to be fail safe. It may stop working without warning and/or produce unreliable results.</string>

    <!-- Disclaimer title message shown when user first starts app -->
    <string name="disclaimer_title">Disclaimer</string>

    <!-- Error text shown in glucose list (max 3 characters) -->
    <string name="err">ERR</string>

    <!-- Stop button text-->
    <string name="button_stop">STOP</string>

    <!-- Alarm button text-->
    <string name="button_alarm">ALARM</string>

    <!-- Start button text-->
    <string name="button_start">START</string>

    <!-- Wait button text-->
    <string name="button_wait">WAIT</string>

    <!-- Check glucose now button text -->
    <string name="button_check_now">Check now</string>

    <!-- Message shown when user first starts app -->
    <string name="status_message_first_startup">This is the first startup. The watch app might not be installed yet. Please wait a moment, then restart the app.</string>

    <!-- Status text alarm -->
    <string name="status_text_alarm">ALARM!!</string>

    <!-- Status text showing how many times the watch has attempted to get glucose value -->
    <string name="status_check_attempt" formatted="false">"Attempt %d/%d"</string>

    <!-- Status text showing how many times the watch has failed to get glucose value -->
    <string name="status_check_attempt_failed" formatted="false">"Attempt %d/%d failed"</string>

    <!-- Status text next check -->
    <string name="status_text_next_check" formatted="false">"Next check: %s"</string>

    <!-- Status text not running -->
    <string name="status_text_not_running">Not running</string>

    <!-- Nightscout menu item -->
    <string name="nightscout">Nightscout</string>

    <!-- Checkbox to enable nightscout -->
    <string name="nightscout_enable">Enable Nightscout Rest API</string>

    <!-- EditText settings for setting Nightscout URL -->
    <string name="nightscout_set_url">Set URL</string>

    <!-- Button visible when alarm is snoozing -->
    <string name="button_alarm_disabled">Enable</string>

    <!-- Button text to disable alarm for a period of time-->
    <string name="alarm_disable_button" formatted="false">Disable %d min</string>

    <!-- Button text to turn off alarm -->
    <string name="alarm_turn_off">Turn off</string>

    <!-- Toast message telling us we failed to turn off alarm -->
    <string name="toast_turn_off_alarm_failed">Failed to turn off alarm</string>

    <!-- Text message telling us the alarm is disabled for low glucose (Max 30 characters) -->
    <string name="alarm_disabled_low_text" formatted="false">Low glucose alarm snoozed: %s</string>

    <!-- Text message telling us the alarm is disabled for high glucose (Max 30 characters) -->
    <string name="alarm_disabled_high_text" formatted="false">High glucose alarm snoozed: %s</string>

    <!-- Use mmol hint -->
    <string name="settings_glucose_units_text">Use mmol/l</string>

    <!-- Limit for high glucose (Max 25 characters)-->
    <string name="settings_alarm_high_title">High glucose limit</string>

    <!-- Limit for low glucose (Max 25 characters)-->
    <string name="settings_alarm_low_title">Low glucose limit</string>

    <!-- If alarm should sound from phone -->
    <string name="settings_phone_alarm_text">Use alarm sound from phone</string>

    <!-- Disable alarm for X minutes for high glucose (Max 25 characters) -->
    <string name="settings_snooze_high_title">Snooze high glucose</string>

    <!-- Disable alarm for X minutes for low glucose (Max 25 characters)-->
    <string name="settings_snooze_low_title">Snooze low glucose</string>

    <!-- If the alarm should sound when you get ERR -->
    <string name="settings_err_checkbox">Alarm on ERR</string>

    <!-- How many times you need to get ERR for alarm -->
    <string name="settings_err_edittext">How many ERR in a row required</string>

    <!-- Shown in quick settings to verify watch settings are up to date-->
    <string name="watch_value">Value on watch: %s</string>

    <!-- Preferences button in overflow menu -->
    <string name="preferences">Preferences</string>

    <!-- Quick settings button -->
    <string name="snooze">Snooze</string>

    <!-- Toast message telling us settings have been updated on watch -->
    <string name="settings_updated_on_watch">Settings updated on watch</string>

    <!-- Settings category for general settings -->
    <string name="settings_category_general">General settings</string>

    <!-- Settings category for Text-to-speech settings -->
    <string name="settings_category_text_to_speech">Text-to-speech</string>

    <!-- Settings title for using Text-to-speech -->
    <string name="settings_text_to_speech_title">Use Text-to-speech</string>

    <!-- Settings summary for using Text-to-speech -->
    <string name="settings_text_to_speech_summary">Have your glucose values read out</string>

    <!-- Settings title for using Text-to-speech only when there is an alarm -->
    <string name="settings_text_to_speech_only_alarm_title">Only use Text-to-speech on alarms</string>

    <!-- Text-to-speech toast error message. Failed to initialize text-to-speech -->
    <string name="error_text_to_speech_init">Failed to initialize Text-to-speech</string>

    <!-- Text-to-speech message on new glucose value -->
    <string name="text_to_speech_message" formatted="false">Glucose value is %s. Trend is %s</string>

    <!-- Will replace %s at the end of text_to_speech_message when trend is going up -->
    <string name="text_to_speech_trend_up">rising fast</string>

    <!-- Will replace %s at the end of text_to_speech_message when trend is going up slowly -->
    <string name="text_to_speech_trend_slightly_up">rising slowly</string>

    <!-- Will replace %s at the end of text_to_speech_message when trend is stable -->
    <string name="text_to_speech_trend_flat">stable</string>

    <!-- Will replace %s at the end of text_to_speech_message when trend is going down fast -->
    <string name="text_to_speech_trend_down">going down fast</string>

    <!-- Will replace %s at the end of text_to_speech_message when trend is going down slowly -->
    <string name="text_to_speech_trend_slightly_down">going down slowly</string>

    <!-- Will replace %s at the end of text_to_speech_message when trend is unknown -->
    <string name="text_to_speech_trend_unknown">unknown</string>

    <!-- Text-to-speech when we get an ERR -->
    <string name="text_to_speech_error">Failed to fetch glucose value</string>

    <!-- Enable xDrip+ broadcast -->
    <string name="xdrip_plus_broadcast_summary">Send data to xDrip+ running on the same handset</string>

    <!-- Disable alarms on LibreAlarm and use xDrip+ alarm instead -->
    <string name="all_alarms_disabled_summary">Disable all Watch and LibreAlarm alerts and use xDrip+ for alarms!</string>

    <!-- How often we should make glucose readings -->
    <string name="settings_glucose_interval">Set glucose reading interval</string>

    <!-- Title for setting allowing the user to slow down the watch CPU to save battery -->
    <string name="pref_key_clock_speed_title">Slow down watch CPU</string>

    <!-- Summary for setting allowing the user to slow down the watch CPU to save battery -->
    <string name="pref_key_clock_speed_summary">Run watch at slowest processing speed to save battery. (Not recommended)</string>

    <!-- Title for setting allowing the user to disable the watch touchscreen to avoid accidental touches -->
    <string name="pref_key_disable_touchscreen_title">Completely disable watch touchscreen</string>

    <!-- Summary for setting allowing the user to disable the watch touchscreen to avoid accidental touches -->
    <string name="pref_key_disable_touchscreen_summary">(Recommended) Use app reboot menu item or hold watch button to reverse</string>

    <!-- Title for setting to enable root -->
    <string name="pref_key_root_title">Enable root functionality</string>

    <!-- Title for setting to enable root -->
    <string name="pref_key_root_summary">Requires rooted watch (Recommended)</string>
    <string name="uninstall_xdrip_watchface">Uninstall xDrip watchface</string>
    <string name="remove_the_xdrip_watchface_from_the_collector_watch">Remove the xDrip watchface from the collector watch</string>
    <string name="toggle_nfc">Toggle NFC</string>
    <string name="try_to_turn_nfc_off_when_not_in_use">Try to turn NFC off when not in use (Not recommended)</string>
    <string name="reboot_watch">Reboot watch (needs root)</string>
    <string name="clear_statistics">Clear Statistics</string>
    <string name="toggle_nfc_on_error">Toggle NFC on error</string>
    <string name="turn_nfc_off_if_get_errors">Turn NFC off and on if we get read errors (Recommended)</string>
    <string name="auto_theatre_mode_preference_summary">Enables theatre mode periodically, which disables notifications from the phone activating the watch</string>
    <string name="auto_theatre_mode_preference_title">Always-On Theatre Mode</string>
    <string name="glucose_reading_interval_summary">5 minute (best) or 10 (battery saver)</string>
    <string name="power_save_features">Power save features</string>
    <string name="xdrip_plus_settings">xDrip+ Settings</string>
    <string name="xdrip_plus_download">Download xDrip+</string>
    <string name="scan_half_as_often_when_watch">Scan half as often when watch battery is less than</string>
    <string name="slow_interval_when_power_low">Slow interval when power low</string>
    <string name="power_low_percentage">Power Low percentage</string>

    <!-- Red sensor error text shown in glucose list (max 5 characters) -->
    <string name="s_err">ERR</string>

    <!-- Msg - Sending clear stats command -->
    <string name="clear_stats_command">Sending clear statistics command to watch!</string>

    <!-- Stats successes -->
    <string name="stats_successes">Successes:</string>

    <!-- Stats successes -->
    <string name="stats_failures">Failures:</string>

    <!-- Stats successes rate -->
    <string name="stats_successes_rate">Success rate:</string>

    <!-- Msg - Not connected -->
    <string name="not_connected">Not connected</string>

    <!-- Msg - Wear not connected -->
    <string name="wear_not_connected">Wear not connected</string>

    <!-- Msg - Sending reboot command -->
    <string name="reboot_command">Sending reboot command to watch!</string>

    <!-- Red Err - Null -->
    <string name="sensor_error">The sensor has been read incorrectly, no plausible value could be determined.</string>

</resources>
